<resources>
    <string name="app_name">AndroidSDK</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Addon Payments</string>
    <string name="nav_header_subtitle" translatable="false">soporte@addonpayments.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_gallery" translatable="false">API</string>
    <string name="menu_slideshow" translatable="false">HPP</string>
    <string name="menu_send">Redes Sociales</string>
    <string name="precio">Precio:</string>
    <string name="gateway">Gateway:</string>
    <string name="desc">Descripción:</string>
    <string name="ref">Referencia:</string>
    <string name="payNow">Pagar ahora</string>
    <string name="numCard">Número de tarjeta</string>
    <string name="mes">Mes</string>
    <string name="year">Año</string>
    <string name="cvv">CVV</string>
    <string name="nTitular">Nombre del titular</string>
    <string name="envOpButton">ENVIAR OPERACIÓN</string>
    <string name="cpEnv">C.P. Envío:</string>
    <string name="dir">Dirección:</string>
    <string name="titleHpp">Viaje a Nueva Zelanda</string>
    <string name="titleFragmentApi">Enviar operación por remoto</string>
    <string name="titleFragmentHpp">Enviar opración por redirección</string>
    <string name="ruta">Ruta por Nueva Zelanda</string>
    <string name="unidad">1 unidad</string>
</resources>
